<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Popular Movies - Stage 1</string>

    <string name="sort_by">Sort by</string>

    <string name="refresh_title">Refresh</string>

    <string name="share_trailer">Share trailer</string>

    <string name="empty_favorite_movies_list">Your favorites movies will be shown here</string>

    <!-- preferences -->
    <string name="preferences_title">Settings</string>
    <string name="pref_sort_criterion_title">Movie listing</string>
    <string name="pref_sort_criterion_key" translatable="false">sort_by</string>
    <string name="pref_sort_criterion_default_value" translatable="false">@string/pref_sort_by_popularity_value</string>


    <string name="pref_sort_by_popularity_entry">Sort by popularity</string>
    <string name="pref_sort_by_popularity_value" translatable="false">popularity</string>

    <string name="pref_sort_by_top_rated_entry">Sort by top rated</string>
    <string name="pref_sort_by_top_rated_value" translatable="false">top-rated</string>

    <string name="pref_sort_by_favorites_only_entry">Show favorites only</string>
    <string name="pref_sort_by_favorites_only_value" translatable="false">favorite-only</string>

    <string name="tools_movie_tile">Movie Title</string>
    <string name="tools_movie_release_date">2000-00-00</string>
    <string name="tools_movie_vote_average">9.9/10</string>
    <string name="tools_movie_duration">999min</string>
    <string name="tools_movie_overview">Lorem Ipsum</string>
    <string name="tools_trailer_tile">Trailer Title</string>
    <string name="tools_review_author">Author o\' Thereview</string>
    <string name="tools_review_content">Ipsum Lorem</string>

    <string name="average_vote_label">Vote Average</string>
    <string name="average_vote_formatted_value"><xliff:g>%1$s</xliff:g>/<xliff:g>%2$s</xliff:g></string>
    <string name="average_vote_maximum_value">10</string>
    <string name="overview_label">Overview</string>
    <string name="release_date_label">Release Date</string>
    <string name="duration_label">Duration</string>
    <string name="duration_formatted_value"><xliff:g>%1$s</xliff:g>min</string>

    <string name="trailer_one_label">Trailer</string>
    <string name="trailer_other_label">Trailers</string>
    <plurals name="trailer_plurals_label">
        <item quantity="one">@string/trailer_one_label</item>
        <item quantity="other">@string/trailer_other_label</item>
    </plurals>
    <string name="review_one_label">Review</string>
    <string name="review_other_label">Reviews</string>
    <plurals name="review_plurals_label">
        <item quantity="one">@string/review_one_label</item>
        <item quantity="other">@string/review_other_label</item>
    </plurals>

    <string name="added_to_favorite">Added to favorites</string>
    <string name="removed_from_favorite">Removed from favorites</string>

    <string name="error_null_json_returned">Something went wrong.</string>
    <string name="error_no_network_connectivity">Could not retrieve data. Check network connectivity.</string>
    <string name="error_no_network_connectivity_snackbar">No Internet connectivity.</string>
    <string name="error_invalid_themoviedb_api_key">The API Key for The MovieDB was not set during build.</string>
</resources>
