<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movie_data_root_layout_id"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/act_movie_data_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:textSize="@dimen/act_movie_data_heading_font_size"
        tools:text="@string/tools_movie_tile" />

    <android.support.constraint.Guideline
        android:id="@+id/mddi_guideline_right"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/mddi_guideline_middle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />


    <ImageView
        android:id="@+id/act_movie_data_poster_image_view"
        android:layout_width="@dimen/act_movie_data_trailer_poster_w"
        android:layout_height="300dp"

        android:adjustViewBounds="true"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:paddingTop="@dimen/act_movie_data_text_padding"
        app:layout_constraintStart_toStartOf="@+id/mddi_guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_title_tv"
        tools:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/act_movie_data_release_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:paddingTop="@dimen/act_movie_data_text_padding"
        android:text="@string/release_date_label"
        android:textSize="@dimen/act_movie_data_heading_font_size"
        app:layout_constraintStart_toStartOf="@+id/mddi_guideline_middle"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_title_tv" />

    <TextView
        android:id="@+id/act_movie_data_release_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:textSize="@dimen/act_movie_data_text_font_size"
        app:layout_constraintStart_toStartOf="@+id/act_movie_data_release_date_label"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_release_date_label"
        tools:text="@string/tools_movie_release_date" />

    <TextView
        android:id="@+id/act_movie_data_average_vote_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:paddingTop="@dimen/act_movie_data_text_padding"
        android:text="@string/average_vote_label"
        android:textSize="@dimen/act_movie_data_heading_font_size"
        app:layout_constraintStart_toStartOf="@+id/act_movie_data_release_date_tv"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_release_date_tv" />

    <TextView
        android:id="@+id/act_movie_data_average_vote_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:textSize="@dimen/act_movie_data_text_font_size"
        app:layout_constraintStart_toStartOf="@+id/act_movie_data_average_vote_label"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_average_vote_label"
        tools:text="@string/tools_movie_vote_average" />

    <TextView
        android:id="@+id/act_movie_data_duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:paddingTop="@dimen/act_movie_data_text_padding"
        android:text="@string/duration_label"
        android:textSize="@dimen/act_movie_data_heading_font_size"
        app:layout_constraintStart_toStartOf="@+id/act_movie_data_average_vote_tv"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_average_vote_tv" />

    <TextView
        android:id="@+id/act_movie_data_duration_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:textSize="@dimen/act_movie_data_text_font_size"
        app:layout_constraintStart_toStartOf="@+id/act_movie_data_duration_label"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_duration_label"
        tools:text="@string/tools_movie_duration" />

    <Button
        android:id="@+id/act_movie_data_favorite_button"
        android:layout_width="@dimen/act_movie_data_favorite_button_w"
        android:layout_height="@dimen/act_movie_data_favorite_button_h"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:focusable="false"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/act_movie_data_duration_tv"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_duration_tv"
        tools:text="@string/mark_as_favorite" />


    <TextView
        android:id="@+id/act_movie_data_overview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:paddingTop="@dimen/act_movie_data_text_padding"
        android:text="@string/overview_label"
        android:textSize="@dimen/act_movie_data_heading_font_size"
        app:layout_constraintStart_toStartOf="@+id/act_movie_data_poster_image_view"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_poster_image_view" />

    <TextView
        android:id="@+id/act_movie_data_overview_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:textSize="@dimen/act_movie_data_text_font_size"
        app:layout_constraintStart_toStartOf="@+id/act_movie_data_overview_label"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_overview_label"
        tools:text="@string/tools_movie_overview" />

    <TextView
        android:id="@+id/act_movie_data_trailer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:paddingTop="@dimen/act_movie_data_text_padding"
        android:text="@string/trailer_other_label"
        android:textSize="@dimen/act_movie_data_heading_font_size"
        app:layout_constraintStart_toStartOf="@+id/act_movie_data_overview_tv"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_overview_tv"
        />

</android.support.constraint.ConstraintLayout>


