<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/act_movie_data_release_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:paddingTop="@dimen/act_movie_data_text_padding"
        android:text="@string/release_date_label"
        android:textSize="@dimen/act_movie_data_heading_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/act_movie_data_release_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:textSize="@dimen/act_movie_data_text_font_size"
        app:layout_constraintStart_toStartOf="@+id/act_movie_data_release_date_label"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_release_date_label"
        tools:text="@string/tools_movie_release_date" />

    <TextView
        android:id="@+id/act_movie_data_average_vote_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:paddingTop="@dimen/act_movie_data_text_padding"
        android:text="@string/average_vote_label"
        android:textSize="@dimen/act_movie_data_heading_font_size"
        app:layout_constraintStart_toStartOf="@+id/act_movie_data_release_date_tv"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_release_date_tv" />

    <TextView
        android:id="@+id/act_movie_data_average_vote_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:textSize="@dimen/act_movie_data_text_font_size"
        app:layout_constraintStart_toStartOf="@+id/act_movie_data_average_vote_label"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_average_vote_label"
        tools:text="@string/tools_movie_vote_average" />

    <TextView
        android:id="@+id/act_movie_data_duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:paddingTop="@dimen/act_movie_data_text_padding"
        android:text="@string/duration_label"
        android:textSize="@dimen/act_movie_data_heading_font_size"
        app:layout_constraintStart_toStartOf="@+id/act_movie_data_average_vote_tv"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_average_vote_tv" />

    <TextView
        android:id="@+id/act_movie_data_duration_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/act_movie_data_text_padding"
        android:paddingRight="@dimen/act_movie_data_text_padding"
        android:textSize="@dimen/act_movie_data_text_font_size"
        app:layout_constraintStart_toStartOf="@+id/act_movie_data_duration_label"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_duration_label"
        tools:text="@string/tools_movie_duration" />

    <Button
        android:id="@+id/act_movie_data_favorite_button"
        android:layout_width="@dimen/act_movie_data_favorite_button_w"
        android:layout_height="@dimen/act_movie_data_favorite_button_h"
        android:paddingTop="@dimen/act_movie_data_text_padding"
        android:focusable="false"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/act_movie_data_duration_tv"
        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_duration_tv"
        tools:text="@string/mark_as_favorite" />

</android.support.constraint.ConstraintLayout>


